--- a/src/utilities/TrendingVideos.css
+++ b/src/utilities/TrendingVideos.css
@@ -1,4 +1,3 @@
-
 .trending-videos-heading{
     text-align: center;
 }
@@ -7,4 +6,17 @@ display: flex;
 justify-content: center;
 flex-wrap: wrap;
 gap: 2rem;
+margin: 0 0 2rem 0;
 } 
+.category-box {
+    border-radius: 1rem;
+    padding: .0 .5rem;
+    margin:  .25rem  .5rem;
+    width: fit-content;
+    font-size: small;
+    cursor: pointer;
+    border: 1px solid var(--secondary-color);
+ }
+ .category-box:hover{
+    box-shadow: 1px 1px 1px 1px var(--primary-color);
+ }
