--- a/src/utilities/LandingPage.css
+++ b/src/utilities/LandingPage.css
@@ -1,20 +1,18 @@
 .category-container{ 
     display: flex;
     justify-content: center;
-
+    margin-top: .125rem;
 }
-
-
 
 .landing-page-body-container{
     display: flex;
-    margin: 1rem 1rem 1rem 0rem;
+    margin: 0 1rem 1rem 0rem;
 }
 
-
 .duck-list-content-type{
+   margin-top: 0;
    width: 8rem;
-   padding-right: 2rem;
+   padding-right: 1rem;
    padding-left: 1rem;
 
 }
