--- a/src/utilities/TrendingVideos.css
+++ b/src/utilities/TrendingVideos.css
@@ -6,7 +6,7 @@ display: flex;
 justify-content: center;
 flex-wrap: wrap;
 gap: 2rem;
-margin: 0 0 2rem 0;
+margin: 0.5rem 0 2rem 0;
 } 
 .category-box {
     border-radius: 1rem;
