--- a/src/utilities/ActiveVideoCard.css
+++ b/src/utilities/ActiveVideoCard.css
@@ -9,14 +9,16 @@
     width: 100%;
     height: 70vh;
 }
+@media (max-width: 580px) {
+    .active-video-card-media{
+        height: 50vh;
+    }
+}
 .fa-solid{
     cursor: pointer;
 }
-.active-video-card-title {
-    margin-bottom: .125rem;
-}
-.active-video-card-sub-title{
-    margin-top: 0;
+.activ-video-card-icons-container{
+ padding-left: .5rem;
 }
 .active-video-card-bottom-content{
     margin: .5rem 0 0 0;
@@ -28,9 +30,14 @@
 .active-video-card-bottom-content-right-side{
     display: flex;
     flex-direction: row;
+    font-size: x-small;
+    padding-right: .5rem;
+    margin-top: .3rem;
 }
 .active-video-card-icons-and-tags{
 margin-right: .5rem;
+font-size: x-small;
+
 }
 .active-video-card-description-title{
     margin-bottom: 0;
