--- a/src/utilities/VideoPage.css
+++ b/src/utilities/VideoPage.css
@@ -19,10 +19,13 @@ width: 70%;
 @media  (max-width: 500px) {
     .video-page-body-content-left-side{
         width: 100%;
-        }
-        .video-page-body-content-right-side{
-            width: 40%;
+}
+ .video-page-body-content-right-side{
+            width: 100%;
             margin-top: 2.5%;
-           
-        }
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+    }
 }
