** trending page turned landing page amended

--- a/src/utilities/TrendingVideos.css
+++ b/src/utilities/TrendingVideos.css
@@ -1,3 +1,6 @@
+.trending-page-body{
+display: flex;
+}
 .trending-videos-heading{
     text-align: center;
 }
@@ -8,15 +11,32 @@ flex-wrap: wrap;
 gap: 2rem;
 margin: 0.5rem 0 2rem 0;
 } 
+.category-container{
+    display: flex;
+    justify-content: center;
+}
 .category-box {
     border-radius: 1rem;
-    padding: .0 .5rem;
-    margin:  .25rem  .5rem;
+    padding: .4rem .9rem;
+    margin:  .5rem  .5rem .25rem .5rem;
     width: fit-content;
     font-size: small;
     cursor: pointer;
     border: 1px solid var(--secondary-color);
+    background-color: #fff;
  }
- .category-box:hover{
-    box-shadow: 1px 1px 1px 1px var(--primary-color);
+
+ .category-box:focus{
+     font-weight: 700;
+ }
+ 
+ .duck-list-content-type-items{
+     display: flex;
+     gap: .75rem;
+     margin-right: 1.5rem;
+     padding-left: .25rem;
+ }
+ .duck-list-content-type{
+     border-right: 1px solid var(--secondary-color);
+
  }
