--- a/src/utilities/VideoCard.css
+++ b/src/utilities/VideoCard.css
@@ -9,15 +9,19 @@
 .video-card-btn {
   width: 100%;
   background-color: var(--primary-color);
-  color: var(--secondary-color);
+  color: #fff;
+  font-size: large;
+  font-weight: normal;
 }
 .video-card-title {
   margin: 0.25rem 0 0 0.25rem;
+  font-size: normal;
+  
 }
 .video-card-sub-title {
   margin: 0 0 .25rem .25rem;
+  font-size: small;
+  font-weight: bold;
 }
 
-.video-card-container p {
-  font-size: x-small;
-}
+
