--- a/src/utilities/TrendingVideos.css
+++ b/src/utilities/TrendingVideos.css
@@ -6,10 +6,10 @@ display: flex;
 }
 .trending-videos-card-container{
 display: flex;   
-justify-content: center;
+align-content: center;
 flex-wrap: wrap;
 gap: 2rem;
-margin: 0.5rem 0 2rem 0;
+margin: 0.5rem 0 1.5rem 1.5rem;
 } 
 .category-container{
     display: flex;
@@ -33,10 +33,11 @@ margin: 0.5rem 0 2rem 0;
  .duck-list-content-type-items{
      display: flex;
      gap: .75rem;
-     margin-right: 1.5rem;
+     margin-right: 2rem;
      padding-left: .25rem;
  }
  .duck-list-content-type{
      border-right: 1px solid var(--secondary-color);
 
  }
+
