**like & dislike icons made conditional

--- a/src/utilities/ActiveVideoCard.css
+++ b/src/utilities/ActiveVideoCard.css
@@ -36,7 +36,7 @@
 }
 .active-video-card-icons-and-tags{
 margin-right: .5rem;
-font-size: x-small;
+font-size: large;
 
 }
 .active-video-card-description-container{
