--- a/src/utilities/ActiveVideoCard.css
+++ b/src/utilities/ActiveVideoCard.css
@@ -37,7 +37,7 @@
 .active-video-card-icons-and-tags{
 margin-right: .5rem;
 font-size: large;
-
+cursor: pointer;
 }
 .active-video-card-description-container{
     font-size: small;
