--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 .list{
     display: flex;
     justify-content: space-between;
@@ -11,4 +12,15 @@
 }
 .list i{
     cursor: pointer;
+}
+.mobile-navigation{
+    display: flex;
+}
+.mobile-navigation i{
+    font-size: x-large;
+}
+@media (min-width: 520px){
+    .mobile-navigation{
+        display: none;
+    }
 }
