--- a/src/utilities/VideoPage.css
+++ b/src/utilities/VideoPage.css
@@ -1,33 +1,7 @@
+.vPage-container{
+    display: grid;
+    grid-template-columns: 70% 25%;
+    margin: 1rem 0rem 2rem 0;
+    gap: 3rem;
+}
 
-.video-page-body{
-    display: flex;
-    /* flex-wrap: wrap; */
-    margin: 1rem 2rem 2rem 0;
-    gap: 5%;
-
-}
-.video-page-body-content-left-side{
-width: 70%;
-}
-.video-page-body-content-right-side{
-    width: 20%;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-@media  (max-width: 500px) {
-    .video-page-body-content-left-side{
-        width: 100%;
-}
- .video-page-body-content-right-side{
-            width: 100%;
-            margin-top: 2.5%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-    }
-    .video-page-body{
-        flex-wrap: wrap;
-    }
-}
