--- a/src/utilities/VideoPage.css
+++ b/src/utilities/VideoPage.css
@@ -1,7 +1,24 @@
 .vPage-container{
-    display: grid;
-    grid-template-columns: 70% 25%;
-    margin: 1rem 0rem 2rem 0;
+    width: 100%;
+    display: flex;
+    margin-top: 1rem;
     gap: 3rem;
 }
+.video-page-body-content-left-side{
+   width: 70%;
+}
+.video-page-body-content-right-side{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+@media(max-width: 520px){
+    .vPage-container{
+        display: flex;
+        flex-direction: column;
+    }
+    .video-page-body-content-left-side{
+        width: 100%;
+     }
 
+}
