--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
     justify-content: space-between;
     align-items: center;
     padding: .5rem 1rem;
+    width: fit-content;
 }
 .list li{
     margin-right: 3rem;
